v1.12:
- Keep property tool at selected property when an invalid value is received.