@@ -13,11 +13,11 @@ New features:
 - Particle order reloading (shortcut: Shift-F5).
 - Subframe animation (shortcut: Shift-Space). Runs the simulation particle-by-particle rather than frame-by-frame.
 - Subframe recording (Lua: `tpt.record_subframe(true)`). Starts a recording of particle-by-particle simulation and automatically stops recording at the end of the frame. You can stop the recording with `tpt.record_subframe(false)` without stopping particle-by-particle simulation.
-- (v1.1) Stack tool (shortcut: Shift-S). Clicking on a stack of particles unstacks them; selecting multiple particles in different positions stacks them in order of their positions.
+- (v1.1) Stack tool (shortcut: Shift-S). Dragging on a stack of particles unstacks them; selecting multiple particles in different positions stacks them in order of their positions.
 - (v1.1) Stack mode (shortcut: Shift-D to toggle). Allows you to draw over existing particles, and makes right-click delete one stacked particle at a time. This helps to make transparent DTEC.
 - (v1.7) Config tool (shortcut: C). Sets particle properties in a few clicks. DRAY: Sets tmp, then tmp2. CRAY: Sets tmp2, then tmp. LDTC: Sets life, then tmp. DTEC/TSNS/LSNS: Sets tmp2. FILT: Sets tmp. CONV: Sets tmp (click on another particle with the type you want to set the tmp to).
 - (v1.8) Timelapse recording (Lua: `tpt.setrecordinterval(<frames>)`). Changes the interval that frames are captured when recording. Useful when making timelapses.
-- (v1.10) Stack edit (shortcut: E and Shift-E). Config tool, property tool and ctype-draw target particles at the selected depth. When stack mode is enabled (Shift-D), particles are created and deleted at the selected depth. Note that using the brush with stack edit messes with particle order, so this is best combined with automatic particle order reloading (`tpt.autoreload_enable(1)`). You can still access the element search tool with Ctrl-E.
+- (v1.10) Stack edit (shortcut: X, Shift-X, PageUp, PageDown, Home, End). Config tool, property tool, ctype-draw and subframe debugging (Shift-F) target particles at the selected depth. When stack mode is enabled (Shift-D), particles are created and deleted at the selected depth. Note that using the brush with stack edit messes with particle order, so this is best combined with automatic particle order reloading (`tpt.autoreload_enable(1)`).
 
 New features enabled by the Lua command `tpt.autoreload_enable(1)`:
 
@@ -39,6 +39,7 @@ HUD changes:
 - (v1.10) The HUD is slightly more compact.
 - (v1.11) The subframe debugging position is shown in the HUD.
 - (v1.11) CRAY FILT mode is shown in the debug HUD.
+- (v1.12) CONV's tmp is presented as an element name, to the left of its ctype.
 
 Other quality-of-life changes:
 - Alt-F continues updating particles until it encouters an "interesting" update (create\_part, delete\_part or part\_change\_type called), and does not display any log messages until the frame is completed.
@@ -51,6 +52,8 @@ Other quality-of-life changes:
 - Applying deco to a stack applies it preferentially to energy particles.
 - (v1.1) Creating CRAY with the brush gives it a ctype of SPRK automatically. If you want to create a ctype-less CRAY, use the property tool.
 - (v1.10) Tab no longer changes the brush, since it conflicts with Alt-Tab. You can still change the brush with Shift-Tab.
+- (v1.12) When pasting or placing stamps, you may use the WASD keys to adjust its position instead of the arrow keys.
+- (v1.12) BRAY is visible even when its life is low.
 
 Note that the original game already supports the following subframe debugging features (enable with the Lua command `tpt.setdebug(0x8)`):
 
@@ -144,4 +147,14 @@ v1.11:
 - Fix interesting change detection not detecting killed particles.
 
 v1.12:
+- Make stack edit snap to current stack when scrolling out of bounds.
+- Change stack edit shortcut to X and Shift-X.
+- Scroll through the stack when X/Shift-X is held down.
+- Add Home, End, PageUp and PageDown shortcuts for stack edit.
+- Make subframe debugging stop on particle selected by stack edit.
+- Make stack tool stack and unstack based on cursor drag direction.
+- Make BRAY visible even when its life is low.
+- Display CONV's tmp as an element name next to its ctype in the debug HUD.
+- Indicate config tool and stack edit selections with a colored pointer.
 - Keep property tool on selected property when an invalid value is received.
+- Fix CRAY overlay color scheme in the config tool.
