@@ -637,31 +637,28 @@ bool GameController::KeyPress(int key, int scan, bool repeat, bool shift, bool c
 	bool ret = commandInterface->HandleEvent(LuaEvents::keypress, &ev);
 	if (repeat)
 		return ret;
-	if (ret)
+	if (ret && !gameView->GetPlacingSave())
 	{
 		Simulation * sim = gameModel->GetSimulation();
-		if (!gameView->GetPlacingSave())
+		// Go right command
+		if (key == SDLK_RIGHT)
 		{
-			// Go right command
-			if (key == SDLK_RIGHT)
-			{
-				sim->player.comm = (int)(sim->player.comm)|0x02;
-			}
-			// Go left command
-			else if (key == SDLK_LEFT)
-			{
-				sim->player.comm = (int)(sim->player.comm)|0x01;
-			}
-			// Use element command
-			else if (key == SDLK_DOWN && ((int)(sim->player.comm)&0x08)!=0x08)
-			{
-				sim->player.comm = (int)(sim->player.comm)|0x08;
-			}
-			// Jump command
-			else if (key == SDLK_UP && ((int)(sim->player.comm)&0x04)!=0x04)
-			{
-				sim->player.comm = (int)(sim->player.comm)|0x04;
-			}
+			sim->player.comm = (int)(sim->player.comm)|0x02;
+		}
+		// Go left command
+		else if (key == SDLK_LEFT)
+		{
+			sim->player.comm = (int)(sim->player.comm)|0x01;
+		}
+		// Use element command
+		else if (key == SDLK_DOWN && ((int)(sim->player.comm)&0x08)!=0x08)
+		{
+			sim->player.comm = (int)(sim->player.comm)|0x08;
+		}
+		// Jump command
+		else if (key == SDLK_UP && ((int)(sim->player.comm)&0x04)!=0x04)
+		{
+			sim->player.comm = (int)(sim->player.comm)|0x04;
 		}
 
 		// Go right command
@@ -1225,6 +1222,20 @@ int GameController::GetStackEditDepth()
 void GameController::SetStackEditDepth(int depth)
 {
 	gameModel->GetSimulation()->stackEditDepth = depth;
+}
+
+void GameController::AdjustStackEditDepth(int ddepth)
+{
+	int stackSize = GetSample()->SParticleCount;
+	int currDepth = GetStackEditDepth();
+	if (currDepth >= stackSize)
+		currDepth = stackSize - 1;
+	int newDepth = currDepth + ddepth;
+	if (newDepth < -1)
+		newDepth = -1;
+	if (newDepth >= stackSize)
+		newDepth = stackSize - 1;
+	SetStackEditDepth(newDepth);
 }
 
 int GameController::GetReplaceModeFlags()
